--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favicon</title>
+    <title>Christianity For All</title>
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon_package_v0/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon_package_v0/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon_package_v0/favicon-16x16.png">
@@ -13,5 +13,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+
+    <header></header>
 </body>
 </html>
