--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christianity For All</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon_package_v0/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon_package_v0/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon_package_v0/favicon-16x16.png">
-    <link rel="manifest" href="image/favicon_package_v0/site.webmanifest">
-    <link rel="mask-icon" href="image/favicon_package_v0/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#ffc40d">
-    <meta name="theme-color" content="#ffffff">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Christianity For All</title>
 
-    <header></header>
-</body>
+        <!--FAVICON METADATA-->
+        <link rel="apple-touch-icon" sizes="180x180" href="image/favicon_package_v0/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="image/favicon_package_v0/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="image/favicon_package_v0/favicon-16x16.png">
+        <link rel="manifest" href="image/favicon_package_v0/site.webmanifest">
+        <link rel="mask-icon" href="image/favicon_package_v0/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#ffc40d">
+        <meta name="theme-color" content="#ffffff">
+
+        <!--STYLESHEETS-->
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+
+        <header>
+            <nav>
+                <ul>
+                    <div>
+                        <img src="../image/assets/pngwing.com.png" alt="logo">
+                    </div>
+                    <h1>Christianity For All</h1>
+                </ul>
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+                
+            </nav>
+        </header>
+    </body>
 </html>
