hero section and navbar without styling

--- a/index.html
+++ b/index.html
@@ -16,24 +16,68 @@
 
         <!--STYLESHEETS-->
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
 
         <header>
             <nav>
-                <ul>
-                    <div>
-                        <img src="../image/assets/pngwing.com.png" alt="logo">
+                <!--LOGO-->
+                <ul class="logo">
+                    <div class="logo-img">
+                        <a href="index.html"><img src="../image/assets/pngwing.com.png" alt="logo"></a>
                     </div>
-                    <h1>Christianity For All</h1>
+                    <a href="index.html"><h1>Christianity For All</h1></a>
                 </ul>
 
+                <!--NAV ITEMS-->
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+
+                <!--SEARCH ICON-->
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                </ul>
+
+                <!--SOCIAL LINKS-->
+                <ul>
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                 </ul>
                 
             </nav>
+
+
+
+            <section>
+
+                <div>
+                    <div>
+                        <p>Come join our family</p>
+                        <h2>Grow in <span>Faith</span> with <br> fellow <span>Christians</span> all <br> around the <span>World</span></h2>
+                        <p>Christian blogs that nourish your spirit daily.</p>
+                    </div>
+                    <i class="fa-solid fa-x"></i>
+                    <i class="fa-solid fa-x"></i>
+                    <i class="fa-solid fa-play"></i>
+                    <i class="fa-solid fa-play fa-rotate-180"></i>
+                    <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
+                    <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
+                    <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
+                    <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
+                </div>
+
+                <div>
+
+                </div>
+            </section>
         </header>
+
+
+
     </body>
 </html>
