hero section html items without styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!--LOGO-->
                 <ul class="logo">
                     <div class="logo-img">
-                        <a href="index.html"><img src="../image/assets/pngwing.com.png" alt="logo"></a>
+                        <a href="index.html"><img src="./image/assets/pngwing.com.png" alt="logo"></a>
                     </div>
                     <a href="index.html"><h1>Christianity For All</h1></a>
                 </ul>
@@ -53,13 +53,14 @@
 
 
 
-            <section>
+            <section class="hero-section">
 
-                <div>
+                <div class="hero-section-content">
                     <div>
                         <p>Come join our family</p>
                         <h2>Grow in <span>Faith</span> with <br> fellow <span>Christians</span> all <br> around the <span>World</span></h2>
                         <p>Christian blogs that nourish your spirit daily.</p>
+                        <a href="#">Read Blog</a>
                     </div>
                     <i class="fa-solid fa-x"></i>
                     <i class="fa-solid fa-x"></i>
@@ -69,15 +70,70 @@
                     <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
                     <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
                     <i class="fa-solid fa-chevron-up fa-rotate-90"></i>
+                    <div>
+                        <img src="./image/assets/pngwing.com 2.png" alt="">
+                    </div>
+                    <div>
+                        <img src="./image/assets/pngwing.com 2.png" alt="">
+                    </div>
                 </div>
 
-                <div>
+                <div class="grid-images">
+                    <div>
+                        <div></div>
+                        <!--Image-->
+                        <div>
+                            <img src="./image/assets/joel-muniz-XqXJJhK-c08-unsplash.jpg" alt="">
+                        </div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div>
+                        <!--play button-->
+                        <div>
+                            <div>
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </div>
+                        <!--Stats-->
+                        <div>
+                            <p>1000+</p>
+                            <p>blogs</p>
+                        </div>
+                        <!--Image-->
+                        <div>
+                            <img src="./image/assets/divine-effiong-O1lbOY0H5rc-unsplash.jpg" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <!--Image-->
+                        <div>
+                            <img src="./image/assets/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="">
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <!--Stats-->
+                        <div>
+                            <p>60+</p>
+                            <p>mentors</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div></div>
+                        <!--Stats-->
+                        <div>
+                            <p>60k+</p>
+                            <p>mentees</p>
+                        </div>
+                        <!--Image-->
+                        <div>
+                            <img src="./image/assets/cassidy-rowell-aawzgWHBhfE-unsplash.jpg" alt="">
+                        </div>
+                    </div>
 
                 </div>
             </section>
         </header>
-
-
 
     </body>
 </html>
